@@ -4,6 +4,10 @@
 	state, as the number might have been changed on the fly. Patch by
 	Elliott Draper.
 
+2006-01-15 Konstantin Triger <kostat@mainsoft.com>
+
+	* BaseValidator.cs: fixing visibility bahavior
+
 2006-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* RangeValidator.cs: allow empty data from the control. Patch from Marek
